# smb2

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PHASE2_SUMMARY.md  PHASE3_A1_SUMMARY.md  PHASE3_A2_SUMMARY.md  PHASE3_A3_SUMMARY.md  README.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.cargo/: audit.toml
.claude/projects/-Users-veszelovszki-projects-git-vdavid-smb2/memory/: MEMORY.md  project_status.md
.claude/rules/: docs-maintenance.md  git-conventions.md
.github/workflows/: ci.yml  fuzz.yml
benchmarks/smb/: .gitignore  Cargo.toml  README.md  config.example.toml
benchmarks/smb/src/: config.rs  direct.rs  main.rs  native.rs  report.rs  runner.rs  smb2_runner.rs  smb_runner.rs
docs/: benchmark-findings.md  migration-from-smb-crate.md  releasing.md
docs/notes/: share-enum-rap-fallback-assessment.md
docs/specs/: connection-actor.md  dfs-implementation-plan.md  diagnostics-plan.md  docker-test-infrastructure.md  implementation-plan.md
examples/: diagnostics.rs  diagnostics_live.rs  disk_space.rs  list_directory.rs  list_shares.rs  read_file.rs  streaming_download.rs  watch_directory.rs  write_file.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_compound_split.rs  fuzz_compression_transform_header_parse.rs  fuzz_create_request_parse.rs  fuzz_create_response_parse.rs  fuzz_dfs_referral_response_parse.rs  fuzz_frame_parse.rs  fuzz_header_parse.rs  fuzz_negotiate_request_parse.rs  fuzz_negotiate_response_parse.rs  fuzz_query_info_response_parse.rs  fuzz_sub_frame_parse.rs  fuzz_transform_header_parse.rs
src/: error.rs  fuzzing.rs  lib.rs
src/auth/: CLAUDE.md  der.rs  mod.rs  ntlm.rs  spnego.rs
src/auth/kerberos/: authenticator.rs  ccache.rs  crypto.rs  kdc.rs  messages.rs  mod.rs
src/client/: CLAUDE.md  connection.rs  dfs.rs  diagnostics.rs  mod.rs  pipeline.rs  session.rs  shares.rs  stream.rs  test_helpers.rs  tree.rs  watcher.rs
src/crypto/: CLAUDE.md  compression.rs  encryption.rs  kdf.rs  mod.rs  signing.rs
src/msg/: CLAUDE.md  cancel.rs  change_notify.rs  close.rs  create.rs  dfs.rs  echo.rs  flush.rs  header.rs  ioctl.rs  lock.rs  logoff.rs  mod.rs  negotiate.rs  oplock_break.rs  query_directory.rs  query_info.rs  read.rs  roundtrip_strategies.rs  session_setup.rs  set_info.rs  transform.rs  tree_connect.rs  tree_disconnect.rs  write.rs
src/pack/: CLAUDE.md  filetime.rs  guid.rs  mod.rs
src/rpc/: CLAUDE.md  mod.rs  srvsvc.rs
src/testing/: CLAUDE.md  mod.rs
src/testing/fixtures/consumer/smb-consumer-50shares/: Dockerfile  generate-conf.sh
src/testing/fixtures/consumer/smb-consumer-auth/: Dockerfile
src/testing/fixtures/consumer/smb-consumer-deepnest/: populate.sh
src/testing/fixtures/consumer/smb-consumer-flaky/: cycle.sh
src/testing/fixtures/consumer/smb-consumer-longnames/: populate.sh
src/testing/fixtures/consumer/smb-consumer-readonly/: Dockerfile
src/testing/fixtures/consumer/smb-consumer-slow/: Dockerfile  entrypoint.sh
src/testing/fixtures/consumer/smb-consumer-unicode/: populate.sh  smb.conf
src/testing/fixtures/consumer/smb-consumer-windows/: Dockerfile  smb.conf
src/transport/: CLAUDE.md  mock.rs  mod.rs  tcp.rs
src/types/: CLAUDE.md  flags.rs  mod.rs  status.rs
tests/: CLAUDE.md  concurrent_writes.rs  consumer_integration.rs  diagnostics_snapshot.rs  docker_integration.rs  fuzz_seeds.rs  integration.rs  wire_format_captures.rs
tests/docker/: start.sh  stop.sh
tests/docker/consumer/: docker-compose.yml
tests/docker/consumer/smb-consumer-50shares/: smb.conf
tests/docker/consumer/smb-consumer-auth/: smb.conf
tests/docker/consumer/smb-consumer-both/: Dockerfile  smb.conf
tests/docker/consumer/smb-consumer-flaky/: Dockerfile
tests/docker/consumer/smb-consumer-guest/: Dockerfile
tests/docker/consumer/smb-consumer-linux/: Dockerfile
tests/docker/consumer/smb-consumer-manyfiles/: Dockerfile
tests/docker/consumer/smb-consumer-maxreadsize/: Dockerfile  smb.conf
tests/docker/consumer/smb-consumer-readonly/: smb.conf
tests/docker/consumer/smb-consumer-synology/: Dockerfile  smb.conf
tests/docker/consumer/smb-consumer-unicode/: Dockerfile  populate.sh  smb.conf
tests/docker/internal/: docker-compose.yml
tests/docker/internal/smb-50shares/: generate-conf.sh
tests/docker/internal/smb-ancient/: smb.conf
tests/docker/internal/smb-auth/: Dockerfile  smb.conf
tests/docker/internal/smb-dfs-root/: Dockerfile  init.sh  smb.conf
tests/docker/internal/smb-dfs-target/: init.sh  smb.conf
tests/docker/internal/smb-encryption/: smb.conf
tests/docker/internal/smb-encryption-aes128/: smb.conf
tests/docker/internal/smb-flaky/: Dockerfile
tests/docker/internal/smb-guest/: smb.conf
tests/docker/internal/smb-kerberos/: Dockerfile
tests/docker/internal/smb-manyshares/: Dockerfile  generate-conf.sh
tests/docker/internal/smb-maxreadsize/: smb.conf
tests/docker/internal/smb-readonly/: Dockerfile  smb.conf
tests/docker/internal/smb-signing/: smb.conf
tests/docker/internal/smb-slow/: Dockerfile  smb.conf
tests/fixtures/: test.ccache  test_v3.ccache
