[workspace]
members = [".", "benchmarks/smb"]

[package]
name = "smb2"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Pure-Rust SMB2/3 client library with pipelined I/O"
repository = "https://github.com/vdavid/smb2"
keywords = ["smb", "smb2", "smb3", "cifs", "network"]
categories = ["network-programming", "filesystem"]
readme = "README.md"
documentation = "https://docs.rs/smb2"
exclude = [
    ".github/",
    "AGENTS.md",
    "docs/",
    "justfile",
    "deny.toml",
    "clippy.toml",
    "rustfmt.toml",
    "related-repos/",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Logging facade -- application picks the backend (env_logger, tracing, etc.)
log = "0.4"

# Async runtime agnostic
async-trait = "0.1"

# Error handling
thiserror = "2"

# Enum conversion derives
num_enum = "0.7"

# Async runtime -- transport layer needs net, io-util, time, sync
tokio = { version = "1", features = ["net", "io-util", "time", "sync"] }

# Crypto -- signing, encryption, key derivation
hmac = "0.12"
sha2 = "0.10"
aes = "0.8"
aes-gcm = "0.10"
ccm = "0.5"
cmac = "0.7"
digest = "0.10"

# NTLM authentication (MS-NLMP)
md-5 = "0.10"
md4 = "0.10"

# Cryptographically secure random (direct dependency; transitive copies
# at different major versions come in via aes-gcm and rand)
getrandom = "0.3"

# Compression
lz4_flex = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
proptest = "1"
env_logger = "0.11"
